--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,72 @@
-baseURL = "elastic-code.github.io"
-languageCode = "en-us"
+baseurl = "elastic-code.github.io"
 title = "Elastic code"
-theme = "hermit"
+theme = "hugo-coder"
+languagecode = "en"
+defaultcontentlanguage = "en"
+
+paginate = 20
+
+pygmentsstyle = "bw"
+pygmentscodefences = true
+pygmentscodefencesguesssyntax = true
+
+disqusShortname = "yourdiscussshortname"
+#
+[params]
+  author = "Elastic"
+  info = "Full stack software engineer"
+  description = "John Doe's personal website"
+  keywords = "blog,developer,personal"
+  #avatarurl = "images/avatar.jpg"
+  #gravatar = "e7asticp7astic@gmail.com"
+#
+#  favicon_32 = "/img/favicon-32x32.png"
+#  favicon_16 = "/img/favicon-16x16.png"
+#
+#  footercontent = "Enter a text here."
+  hideFooter = false
+  hideCredits = false
+  hideCopyright = false
+  since = 2017
+#
+#  enableTwemoji = true
+#
+  colorScheme = "auto"
+  hidecolorschemetoggle = false
+#
+#  customCSS = ["css/custom.css"]
+#  customSCSS = ["scss/custom.scss"]
+#  customJS = ["js/custom.js"]
+#
+[taxonomies]
+  category = "categories"
+  series = "series"
+  tag = "tags"
+  author = "authors"
+#
+# Social links
+[[params.social]]
+  name = "Github"
+  icon = "fa fa-github fa-2x"
+  weight = 1
+  url = "https://github.com/E7ast1c/"
+#[[params.social]]
+#  name = "Gitlab"
+#  icon = "fa fa-gitlab fa-2x"
+#  weight = 2
+#  url = "https://gitlab.com/johndoe/"
+#[[params.social]]
+#  name = "Twitter"
+#  icon = "fa fa-twitter fa-2x"
+#  weight = 3
+#  url = "https://twitter.com/johndoe/"
+#
+# Menu links
+[[menu.main]]
+  name = "Blog"
+  weight = 1
+  url  = "posts/"
+#[[menu.main]]
+#  name = "About"
+#  weight = 2
+#  url = "about/"
