--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,10 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
+# Add /public directory
+/public
 
 # Other stuff
 .idea
+*.DS_Store
 
